# zero2prod

./: Cargo.toml  README.md  configuration.toml
.circleci/: config.yml
migrations/: 20210124230203_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs
