[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Sagi Sarussi <sagis@sagis.dev>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.0.0"
config = "0.10.1"
serde = { version = "1", features = ["derive"] }

[dependencies.sqlx]
version = "0.5.1"
#version = "0.4.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


[dev-dependencies]
reqwest = "0.10.10"
tokio = "0.2.24"
